changed text in button

--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Collaboration Board</h1>
     <p class="lead">DESCRIPTION</p>
-    <p><button id="newBoard" class="btn btn-primary btn-lg">Learn more &raquo;</button></p>
+    <p><button id="newBoard" class="btn btn-primary btn-lg">Try it out! &raquo;</button></p>
 </div>
 
 <script>
