new bundle for app scripts

--- a/CollaborationBoard/Views/Board/Id.cshtml
+++ b/CollaborationBoard/Views/Board/Id.cshtml
@@ -5,3 +5,7 @@
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
 </hgroup>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/app_scripts")
+}
