--- a/CollaborationBoard/Views/Board/Id.cshtml
+++ b/CollaborationBoard/Views/Board/Id.cshtml
@@ -1,11 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Board " + ViewBag.BoardId;
+    Layout = null;
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
 
-@section Scripts {
+</head>
+<body>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/app_scripts")
-}
+</body>
+</html>
