made less compilation and minification work

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -1,5 +1,12 @@
-﻿#drawCanvas {
-    background-color: red;
-    width: 800px;
-    height: 600px;
+﻿#container {
+    display: flexbox;
+    justify-content: center;
+    width: 100%;
+    height: 95vh;
+
+    #drawCanvas {
+        background-color: red;
+        width: 800px;
+        height: 600px;
+    }
 }
