created empty page for drawing

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -1,4 +1,8 @@
-﻿<div id="container">
+﻿@{
+    Layout = "~/Views/Shared/_EmptyLayout.cshtml";
+}
+
+<div id="container">
     <canvas id="drawCanvas"></canvas>
 </div>
 
