--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -1,12 +1,19 @@
-﻿#container {
-    display: flexbox;
-    justify-content: center;
-    width: 100%;
-    height: 95vh;
+﻿body {
+    margin: 0;
+    overflow: hidden;
+}
+
+#container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 
     #drawCanvas {
-        background-color: red;
-        width: 800px;
-        height: 600px;
+        background-color: green;
+        width: 100vw;
+        height: 100vh;
     }
 }
