implemented canvas dragging

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -12,7 +12,6 @@
     overflow: hidden;
 
     #drawCanvas {
-        width: 100vw;
-        height: 100vh;
+        background-color: red;
     }
 }
