--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_EmptyLayout.cshtml";
 }
 
+<div id="sidebar"></div>
 <div id="container">
     <canvas id="drawCanvas"></canvas>
 </div>
