--- a/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
+++ b/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
@@ -15,5 +15,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/common_scripts")
     @RenderSection("scripts", required: false)
+    <script src="/signalr/hubs"></script>
 </body>
 </html>
