added users and drawing only sent to users on the same board

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -8,9 +8,7 @@
 </div>
 
 <script>
-    window.Collab = window.Collab || new Object();
-
-    Collab.Id = "@Html.Raw(ViewBag.BoardId)";
+    var boardId = "@ViewBag.BoardId";
 </script>
 
 @Scripts.Render("~/bundles/app_scripts")
