made canvas be always at integer offsets from body

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -21,6 +21,7 @@ body {
         background-color: @canvasColor;
         cursor: default;
         box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.75);
+        position: absolute;
     }
 }
 
