--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -22,6 +22,10 @@ body {
         cursor: default;
         box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.75);
         position: absolute;
+        top: 0;
+        left: 0;
+        width: 800px;
+        height: 600px;
     }
 }
 
