--- a/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
+++ b/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/bundles/font_awesome");
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
