--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -39,3 +39,21 @@ body {
     background-color: @sideColor;
     z-index: 999;
 }
+
+.cursorContainer {
+    display: none;
+
+    width: auto;
+    height: auto;
+    position: absolute;
+
+    .cursor {
+        cursor: default;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        font-size: 20pt;
+    }
+}
