--- a/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
+++ b/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/bundles/font_awesome");
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/bundles/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
