added a draggable text object

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -59,9 +59,15 @@ body {
 
 .entity {
     z-index: 20;
-    position: absolute;
     top: 0px;
     left: 0px;
+}
+
+.entityContainer {
+    display: inline-block;
+    background-color: red;
+    padding: 10px;
+
 }
 
 .box {
