abstracted entities into a collection object

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -63,11 +63,14 @@ body {
     left: 0px;
 }
 
+.entityText {
+    height: 20px;
+}
+
 .entityContainer {
     display: inline-block;
     background-color: red;
     padding: 10px;
-
 }
 
 .box {
