--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -5,17 +5,6 @@
 <div class="jumbotron">
     <h1>Collaboration Board</h1>
     <p class="lead">DESCRIPTION</p>
-    <p><button id="newBoard" class="btn btn-primary btn-lg">Try it out! &raquo;</button></p>
+
+    @Html.Partial("BoardCreationModal")
 </div>
-
-<script>
-    window.onload = function () {
-        ExtendJQuery();
-
-        $("#newBoard").click(function (e) {
-            CreateBoard().done(function (result) {
-                window.location = CreateBoardUrl(result.Id);
-            });
-        });
-    }
-</script>
