fixed initial value of password checkbox

--- a/CollaborationBoard/Views/Shared/BoardCreationModal.cshtml
+++ b/CollaborationBoard/Views/Shared/BoardCreationModal.cshtml
@@ -69,7 +69,7 @@
         ExtendJQuery();
 
         $("#PasswordEnabled").val(false);
-        $("#passwordEnable").prop('checked', false);
+        $("#passwordEnable").val("off");
 
         $("#passwordEnable").on("change", updatePasswordEnabledCheckbox);
 
