--- a/CollaborationBoard/Content/Site.css
+++ b/CollaborationBoard/Content/Site.css
@@ -9,12 +9,6 @@
     padding-right: 15px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
 
 #createBoardForm .form-group > label {
     margin-top: -5px !important;
@@ -94,4 +88,24 @@ input.checkbox:checked + label:after {
 
 #hiddenPasswordInput {
     display: none;
+}
+
+#hiddenIdInput {
+    display: none;
+}
+
+#passwordFormContainer {
+    width: 500px;
+}
+
+#passwordPage {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #71bade;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
