improved drawing tool to accept mouse movements on entire page so that when drawing over elements, the line is not broken up. also changed placeholders in input fields by removing verbs

--- a/CollaborationBoard/Views/Shared/BoardCreationModal.cshtml
+++ b/CollaborationBoard/Views/Shared/BoardCreationModal.cshtml
@@ -18,7 +18,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Board Title</label>
                         <div class="col-sm-7">
-                            <input type="text" class="form-control" name="Title" placeholder="Enter Board Title" />
+                            <input type="text" class="form-control" name="Title" placeholder="Board Title" />
                         </div>
                     </div>
                     <div class="form-group">
@@ -44,7 +44,7 @@
                     <div class="form-group" id="passwordForm">
                         <label class="col-sm-3 control-label">Password</label>
                         <div class="col-sm-7">
-                            <input id="passwordInput" type="password" class="form-control" name="Password" placeholder="Input Password" disabled />
+                            <input id="passwordInput" type="password" class="form-control" name="Password" placeholder="Password" disabled />
                         </div>
                     </div>
                     <div class="form-group" id="passwordRepeatForm">
