--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -5,11 +5,11 @@
 <div id="sidebar"></div>
 <div id="container">
     <canvas id="drawCanvas"></canvas>
-    <div id="messenger">
-        <div id="messageContainer">
+    <div class="messenger">
+        <div class="messageContainer">
         </div>
-        <div id="messageInputContainer">
-            <input id="messageInput" type="text" />
+        <div class="inputContainer">
+            <input class="input" type="text" />
         </div>
     </div>
 </div>
