--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -128,6 +128,10 @@
             }
         }
 
+        .notification {
+            .message;
+        }
+
         .messageUserRepeat {
             margin-top: @sameUserMessageMargin;
         }
