improved chat system by adding notifications for users connecting/disconnecting and adding a userinfo class to the client so that the name/color could be kept track of

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -130,6 +130,38 @@
 
         .notification {
             .message;
+
+            .header {
+                .message.header;
+                height: 2px;
+                padding: 0px;
+            }
+
+            .content {
+                .message.content;
+            }
+
+            .footer {
+                .message.footer;
+            }
+        }
+
+        .error {
+            .header {
+                background-color: #ffb0b0;
+            }
+        }
+
+        .info {
+            .header {
+                background-color: #b8c7ff;
+            }
+        }
+
+        .warning {
+            .header {
+                background-color: #feff76;
+            }
         }
 
         .messageUserRepeat {
