--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -5,12 +5,13 @@
 <div id="sidebar"></div>
 <div id="container">
     <canvas id="drawCanvas"></canvas>
-    <div class="messenger">
+    <div class="messenger out">
         <div class="messageContainer">
         </div>
         <div class="inputContainer">
-            <input class="input" type="text" />
+            <input class="input" type="text" placeholder="Enter message here!" />
         </div>
+        <div class="switchButton"><i class="arrowToggle fa fa-arrows-h"></i></div>
     </div>
 </div>
 
