added a font bundle

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -117,13 +117,16 @@
             }
 
             .header {
-                height: 25px;
+                height: 30px;
+                font-size: 15pt;
+                font-weight: bold;
                 width: 100%;
                 background-color: @messageHeaderColor;
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
                 padding: 3px;
+                font-family: 'Open Sans Condensed';
             }
 
             .emptyHeader {
