--- a/CollaborationBoard/Views/Shared/_Layout.cshtml
+++ b/CollaborationBoard/Views/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/bundles/font_awesome")
     @Styles.Render("~/bundles/css")
+    @Styles.Render("~/fonts")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
