--- a/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
+++ b/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/bundles/font_awesome")
     @Styles.Render("~/bundles/css")
+    @Styles.Render("~/fonts")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
