added signalr to bundles, instead of doing it manually

--- a/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
+++ b/CollaborationBoard/Views/Shared/_EmptyLayout.cshtml
@@ -16,7 +16,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/common_scripts")
+    @Scripts.Render("/signalr/hubs")
     @RenderSection("scripts", required: false)
-    <script src="/signalr/hubs"></script>
 </body>
 </html>
