added a blind that fades in when the page loads

--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -255,3 +255,18 @@
 .in .arrowToggle {
     transform: rotate(360deg);
 }
+
+.loadingBlind {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    .noSelect;
+}
+
+.fadeout {
+    transition: background-color 500ms;
+    background-color: rgba(0, 0, 0, 0);
+}
