--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -12,12 +12,21 @@
     user-select: none;
 }
 
-#container {
+.fullSize {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+}
+
+.flexBox {
+    display: flex;
+}
+
+
+#container {
+    .fullSize;
     overflow: hidden;
     cursor: default;
 
@@ -82,6 +91,8 @@
 @messengerTransitionTime: 500ms;
 
 .messenger {
+    -webkit-flex: 1 1 auto;
+    justify-content: flex-start;
     background-color: @messengerBackColor;
     position: absolute;
     width: @messageWidth;
@@ -94,8 +105,6 @@
     .messageContainer {
         width: 100%;
         height: ~"calc(100% - " @inputHeight ~")";
-        -webkit-flex: 1 1 auto;
-        justify-content: flex-start;
         flex-flow: column;
         overflow-y: scroll;
         padding-bottom: @messageMargin;
@@ -257,16 +266,51 @@
 }
 
 .loadingBlind {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    .fullSize;
     .noSelect;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .fadeout {
     transition: background-color 500ms;
     background-color: rgba(0, 0, 0, 0);
+}
+
+.katexContainer {
+    .fullSize;
+    .flexBox;
+    z-index: 9999;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+
+    .katexModal {
+        margin: auto;
+        width: 50%;
+        height: 50%;
+        background-color: white;
+        min-width: 400px;
+        min-height: 300px;
+
+        .normalText {
+            height: 100%;
+            width: 50%;
+            float: left;
+
+            .input {
+                width: 100%;
+                height: 100%;
+                resize: none;
+                outline: none;
+            }
+        }
+
+        .renderedText {
+            height: 100%;
+            width: 50%;
+            float: right;
+            padding: 10px;
+            font-size: 15pt;
+        }
+    }
 }
