--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -34,6 +34,8 @@
         var boardId = "@ViewBag.BoardId";
     </script>
 
+    @Html.Partial("KatexMessageModal");
+
     @Scripts.Render("~/bundles/app_scripts")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
