--- a/CollaborationBoard/Content/App/app.less
+++ b/CollaborationBoard/Content/App/app.less
@@ -302,6 +302,7 @@
                 height: 100%;
                 resize: none;
                 outline: none;
+                border: 1px solid grey;
             }
         }
 
@@ -311,6 +312,9 @@
             float: right;
             padding: 10px;
             font-size: 15pt;
+            border-right: 1px solid grey;
+            border-top: 1px solid grey;
+            border-bottom: 1px solid grey;
         }
     }
 }
