--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -34,13 +34,13 @@
         var boardId = "@ViewBag.BoardId";
     </script>
 
-    @Html.Partial("KatexMessageModal");
+    @Html.Partial("KatexMessageModal")
 
     @Scripts.Render("~/bundles/app_scripts")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/common_scripts")
+    @Scripts.Render("~/bundles/common_scripts") 
     @Scripts.Render("~/signalr/hubs")
     @Scripts.Render("~/katex_script")
 </body>
