--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -22,7 +22,7 @@
             <div class="messageContainer">
             </div>
             <div class="inputContainer">
-                <input type="text" class="input" placeholder="Enter message here!"></input>
+                <input type="text" class="input" placeholder="Enter message here!" />
             </div>
             <div class="switchButton"><i class="arrowToggle fa fa-arrows-h"></i></div>
         </div>
